[gd_scene load_steps=5 format=3 uid="uid://btrwyrqgii5dk"]

[ext_resource type="Texture2D" uid="uid://4maygrjspkpn" path="res://assets/palette.png" id="1_01usi"]
[ext_resource type="Script" path="res://scripts/palette.gd" id="1_rpotc"]
[ext_resource type="Script" path="res://scripts/ai_controller.gd" id="3_j23u8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73psp"]
size = Vector2(20, 50)

[node name="Palette" type="Sprite2D"]
texture = ExtResource("1_01usi")
script = ExtResource("1_rpotc")

[node name="HitCooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="UpperArea" type="Area2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(1, 1.2)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="UpperArea"]
shape = SubResource("RectangleShape2D_73psp")

[node name="LowerArea" type="Area2D" parent="."]
position = Vector2(0, 30)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="LowerArea"]
scale = Vector2(1, 1.2)
shape = SubResource("RectangleShape2D_73psp")

[node name="AIController" type="Node" parent="." node_paths=PackedStringArray("palette")]
script = ExtResource("3_j23u8")
palette = NodePath("..")

[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_hit_cooldown_timer_timeout"]
[connection signal="area_entered" from="UpperArea" to="." method="_on_upper_area_entered"]
[connection signal="area_entered" from="LowerArea" to="." method="_on_lower_area_entered"]
